# LayerPack

./: .env  .env.example  .gitignore  Cargo.toml  README.md  base.lpack  flutter_layer_pack.dart  lpack.magic  mochi_thai.lpack  mod_rpgm.pack  test_ffi.py  unpack_test.sh
.github/workflows/: node-bindings.yml  publish.yml  rust.yml
node_binding/: .npmignore  Cargo.toml  index.d.ts  index.js  layer-pack-node.linux-x64-gnu.node  package-lock.json  package.json  test_usage.js
node_binding/src/: lib.rs
src/: ffi.rs  lib.rs  main.rs
src/builder/: mod.rs
src/format/: mod.rs
src/resolver/: mod.rs
wasm_binding/: .npmignore  Cargo.toml
wasm_binding/src/: lib.rs
