[package]
name = "layer_pack"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
zstd = "0.13"
lz4_flex = "0.11"
thiserror = "1.0"
anyhow = "1.0"
walkdir = "2.4"
byteorder = "1.5"
sha2 = "0.10"
hex = "0.4"