[package]
name = "layer_pack"
version = "0.1.0"
edition = "2021"

[features]
# default จะไม่มี builder เพื่อความปลอดภัยของไบนารีฝั่งลูกค้า
default = []
builder = ["walkdir"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
lz4_flex = "0.11"
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.5"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
generic-array = "0.14"

# Dependencies ที่ใช้เฉพาะฝั่ง Builder เท่านั้น
walkdir = { version = "2.4", optional = true }
clap = { version = "4.4", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
